--- a/Danmarks Svampeatlas/cs.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/cs.lproj/Localizable.strings
@@ -41,7 +41,7 @@ Created by simplelocalize.io
 "addObservationVC_observationCategories_species" = "Druh";
 "addObservationVC_successfullUpload_title" = "Vaše pozorování bylo vytvořeno";
 "addObservationVC_title" = "Nové pozorování";
-"addObservationVC_useImageMetadata_message" = "Zdá se, že přidaný obrázek byl pořízen více než 500 metrů od aktuálního umístění pozorování. Chcete použít informace o GPS a datu z obrázku?\n\nImage GPS-Precision: %@ m.";
+"addObservationVC_useImageMetadata_message" = "Zdá se, že přidaný obrázek nebyl pořízen v místě, kde se nacházíte. Chcete použít informace o GPS pořízené z obrázku?\n\nPřesnost GPS z obrázku je: %@ m.";
 "addObservationVC_useImageMetadata_negative" = "Ne";
 "addObservationVC_useImageMetadata_positive" = "Ano, použijte metadata obrázku";
 "addObservationVC_useImageMetadata_title" = "Návrh umístění";
@@ -68,7 +68,7 @@ Created by simplelocalize.io
 "common_upload" = "Nahrát";
 "containedResultCell_genus" = "Rod: ";
 "creditationCell_ai" = "Systém rozpoznávání obrazu vyvinuli Milan Šulc a Jiří Matas z ČVUT v Praze a Lukáš Picek ze ZČU v Plzni a Danmarks Svampeatlas (Atlas hub).";
-"creditationCell_aiNewObservation" = "Tyto návrhy jsou založeny na prvním obrázku, který jste přidali k pozorování. Systém rozpoznávání obrazu vyvinuli Milan Šulc a Jiří Matas z ČVUT v Praze a Lukáš Picek ze ZČU v Plzni a Danmarks Svampeatlas (Atlas hub).";
+"creditationCell_aiNewObservation" = "Tyto návrhy názvů jsou založeny na obrázcích, které jste přidali k pozorování. Bere také v úvahu další metadata, jako je substrát, typ vegetace a měsíc.";
 "dataServiceError_decodingError_message" = "Přijatá data nelze přečíst";
 "dataServiceError_decodingError_title" = "Chyba dekódování";
 "dataServiceError_empty_message" = "Odpověď serveru neobsahuje žádná data";
@@ -177,6 +177,10 @@ Created by simplelocalize.io
 "myPageScrollView_logout" = "Odhlásit";
 "myPageScrollView_notificationsHeader" = "Oznámení";
 "myPageScrollView_observationsHeader" = "Pozorování";
+"myPage_changeDetails" = "";
+"myPage_confirmDeletion_message" = "";
+"myPage_confirmDeletion_title" = "";
+"myPage_deleteProfile" = "";
 "navigationItem_about" = "O aplikaci";
 "navigationItem_cameraVC" = "Rozpoznávání";
 "navigationItem_facebook" = "Facebook";
@@ -197,6 +201,7 @@ Created by simplelocalize.io
 "newObservationError_noSubstrateGroup_message" = "Musíte zadat typ podkladu";
 "newObservationError_noVegetationType_message" = "Musíte zadat typ vegetace";
 "newObservationError_tooInaccurate" = "Přesnost umístění je: %0,2f m, což není přesné. Chcete místo toho použít svou aktuální polohu?";
+"note_createdDate" = "Poznámka vytvořena: %@";
 "notebook_message" = "Ještě nemáte žádné uložené poznámky. Tato funkce vám umožňuje ukládat vaše pozorování lokálně, aniž byste je museli nahrávat, než budou zcela připravena. Možná až budete mít lepší připojení k internetu.";
 "notebook_title" = "Zápisník";
 "notificationCell_determinationExpertApproved" = "schváleno odborníkem.";
@@ -244,6 +249,9 @@ Created by simplelocalize.io
 "precision" = "Přesnost %.2f m.";
 "prompt_taxonData_message" = "Abyste mohli tuto funkci používat, musíte si stáhnout data pro offline použití. Pokud jste tak již učinili, může se vám toto oznámení zobrazovat dokud neaktualizujete stažená data. Aktualizaci proveďte jakmile budete mít stabilní připojení k internetu. Připraven?";
 "prompt_taxonData_title" = "Chcete stáhnout data?";
+"recognitionServiceError_addingDataError_message" = "";
+"recognitionServiceError_addingFetchingResults_message" = "";
+"recognitionServiceError_title" = "";
 "recoveryAction_activate" = "Spustit";
 "recoveryAction_login" = "Přihlášení";
 "recoveryAction_openSettings" = "Otevřít nastavení";
@@ -256,6 +264,8 @@ Created by simplelocalize.io
 "reloadCell_tryAgain" = "Zkusit znovu";
 "resultsView_header_message" = "Upozornění: Pokud se chystáte konzumovat houby, které jste našli, nespoléhejte pouze na tuto navrhovanou identifikaci.";
 "resultsView_header_title" = "Máme pro vás %d doporučení";
+"resultsView_unpredictable_message" = "Nejsme schopni vám poskytnout návrh na stanovení s vysokou spolehlivostí – níže uvádíme náš nejlepší odhad.";
+"resultsView_unpredictable_title" = "Žádné návrhy";
 "searchBar_placeholder" = "Vyhledávání ...";
 "searchCell_title" = "Zde vyhledejte hostitele ... 👇";
 "searchVC_cancelButton" = "Zrušit";
@@ -318,5 +328,6 @@ Created by simplelocalize.io
 "notificationCell_determinationApproved_1" = "Pozorování, které sledujete, bylo potvrzeno a schváleno jako:";
 "notificationCell_commentAdded_2" = "jsou následující";
 "notificationCell_determinationAdded_2" = "k pozorování, které sledujete.";
-"whats_new_2_0" = "Právě jsme spustili novou verzi aplikace Svampeatlas (verze 2.0), tentokrát s poměrně výraznými změnami a vylepšeními. Nejdůležitější jsou:";
+"whats_new_2_0" = "Právě jsme spustili novou verzi aplikace Svampeatlas (verze 2.0), tentokrát s poměrně výraznými změnami a vylepšeními. Nejdůležitější jsou:\n\n1) Changed reporting flow. \n2) It is possible to lock coordinates and localities.\n3) Simplification of the notebook functionality\n4) Bug fixes";
+"whats_new_3_0" = "Právě jsme spustili novou verzi aplikace Svampeatlas (verze 3.0), tentokrát s poměrně výraznými změnami a vylepšeními. Nejdůležitější jsou:\n\n1) Nová a vylepšená verze našeho rozpoznávání obrázků. Návrhy nyní vychází ze všech obrázků, které přidáte k pozorování – zahrne také další metadata, jako je substrát, typ vegetace a měsíc, aby poskytoval nejspolehlivější návrhy.\n2) Drobné opravy chyb\n\nPředchozí verze:\n2.0:\n1) Změněný tok hlášení. Změnili jsme pořadí při vytváření nového nálezu tak, že začínáte lokalitou, poté si zvolíte stanoviště, substrát a hostitele a nakonec zvolíte druh. Změna je způsobena především tím, že brzy uvedeme novou vylepšenou verzi naší umělé inteligence pro rozpoznávání obrazu, která bude poskytovat lepší návrhy druhů na základě údajů o stanovištích a substrátech. Pokud chcete v budoucnu začít s návrhem druhu, můžete stále použít funkci návrhu názvu v postranní nabídce\n\n2) Možnost uzamknout název místa a souřadnice. Umožnili jsme uzamknout název místa a případně také najít souřadnice, pokud nahlásíte mnoho nálezů ze stejného místa nebo z jednoho hotspotu. Tímto způsobem můžete ušetřit čas a baterii v terénu a zároveň získat konzistentnější názvy míst pro vaše nálezy. Funkci lze resetovat ručně nebo automaticky po jedné hodině.\n\n3) Zjednodušení funkce Poznámek. Nyní jsme aktualizovali funkci poznámkového bloku, můžete si ukládat svoje pozorování, můžete vybrat názvy druhů ze seznamu druhů, přidávat metadata, ale určování AI ​​se aktivuje pouze tehdy, když znovu otevřete nález z poznámkového bloku a upravíte jej před nahráním do atlasu hub. Účelem změny je úspora času a baterie v terénu, takže se můžete soustředit výhradně na vaše nálezy a vše doplnit k pozorování později. Souřadnice jsou buď propojeny s fotografiemi, které přidáte do poznámkového bloku, nebo s vaší polohou, když je vytvořena nová poznámka k nálezu bez fotografie. Nezapomeňte proto fotografovat nebo si dělat poznámky přímo tam, kde se vaše houba nachází.\n\nKromě toho byla implementována řada drobných vylepšení a oprav chyb. Druhy můžete opět vyhledávat pomocí 3 + 3 kódů (např. ama mus pro Amanita muscaria), stejně jako bylo vylepšeno zobrazování obrázků na prezentacích druhů.\n";
 
